# olopsc-iskolinic

./: .gitignore  .gitmodules  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  sherpa-wrapper.cc
android/app/src/main/cpp/includes/: README.txt
android/app/src/main/cpp/libs/arm64-v8a/: README.txt
assets/: Vee-Vella_en_android_v3_0_0.ppn
assets/models/: README.txt  keywords.txt
clinic_desktop_app/: .gitignore  README.md  build_and_package.ps1  firebase.json  installer.iss  pubspec.yaml
clinic_desktop_app/lib/: main.dart
clinic_desktop_app/test/: widget_test.dart
clinic_desktop_app/windows/: CMakeLists.txt
clinic_input_app/: README.md  firebase.json  pubspec.yaml
clinic_input_app/lib/: main.dart
clinic_input_app/test/: widget_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/alt/: old_home.dart
lib/components/: health_card.dart
lib/data/: health_repository.dart
lib/logic/: audio_pipeline.dart  command.dart  nlu_processor.dart  tts_player.dart  vvella_provider.dart
lib/native/: ffi_bridge.dart
lib/pages/: home.dart  splash.dart  testing.dart
lib/services/: constants.dart
lib/ui/: vvella_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
student_mobile_app/: README.md  pubspec.yaml
student_mobile_app/lib/: main.dart
student_mobile_app/test/: widget_test.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+95 files in other folders)
